--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     --clr-secondary: #8B74DA;
     --clr-accent: #FFFDE7;
     --clr-dark: #000;
-    --distance-top: 7em;
+    --distance-top: 3em;
 }
 
 /* tipografía */
@@ -25,6 +25,7 @@ body {
    text-align: center;
    font-size: 1.37rem;
    color: var(--clr-dark);
+   /* overflow-x: hidden; */
 }
 
 h2 {
@@ -64,7 +65,8 @@ li,
 /* navegacion */
 
 header {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     background-color: #FFF;
     position: fixed;
@@ -112,6 +114,8 @@ a:hover {
 .hero,
 .momTales__img {
     width: 100vw;
+    height: 50vh;
+    object-fit: cover;
 }
 
 .container__img,
@@ -119,6 +123,13 @@ a:hover {
     width: 80vw;
     max-height: 339px;
     object-fit: cover;
+    transition: ease-in-out 300ms;
+}
+
+.container__img:hover,
+.recent__img:hover {
+    transform: scale(1.1);
+    opacity: 0.7;
 }
 
 .recent__img {
@@ -132,12 +143,17 @@ a:hover {
 
 
 /* containers */
-
+.mainSection__heroContainer {
+    position: relative;
+    overflow: hidden;
+}
 
 .ctaLinks__container {
     background-color: var(--clr-secondary);
     margin:0.5rem;
     padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
 }  
 
 .ctaLinks__firstTitle,
@@ -207,7 +223,47 @@ footer {
 }
 
 
+/* media */
 
+@media only screen and (min-width: 700px) {
+    
+    header {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .logo {
+        width: 10vw;
+        margin-inline: 1rem;
+    }
+
+    li {
+        padding-inline: .5rem;
+    }
+
+    .hero {
+        width: 100vw;
+        height: 50vw;
+    }
+    
+    .ctaLinks__container {
+        flex-direction: row;
+        flex: 0 1 100%;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .container__img {
+        width: 25vw;
+    }
+    .ctaLinks__firstTitle,
+    .recent__title {
+      padding-top: 0;
+    }
+
+
+}
 
 /* TODO: 
 - hover state con descripción de texto para las imagenes.
