--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
    text-align: center;
    font-size: 1.37rem;
    color: var(--clr-dark);
-   /* overflow-x: hidden; */
+   overflow-x: hidden;
 }
 
 h2 {
@@ -57,7 +57,7 @@ p {
 
 li,
 .derechos {
-    font-size: 1.2rem;
+    font-size: 1em;
 }
 
 
@@ -76,17 +76,21 @@ header {
 main {
     background-color: var(--clr-main);
     position: relative;
-    top: var(--distance-top); /* Todavia me estoy debatiendo el tamaño del logo, para no tener que cambiar cada top lo hice custom property*/
+    top: var(--distance-top);
 }
 
 .navBar {
     background-color: #FFF;
 }
 
+.navBar > * {
+    font-size: 0.7em;
+}
+
 
 ul {
     list-style: none;
-    display: flex; /* único uso de flexbox por simplicidad de navbar */ 
+    display: flex;
     justify-content: space-between;
     padding-bottom: 1rem;
     margin-left: 1rem;
@@ -114,7 +118,7 @@ a:hover {
 .hero,
 .momTales__img {
     width: 100vw;
-    height: 50vh;
+    height: 40vh;
     object-fit: cover;
 }
 
@@ -130,6 +134,7 @@ a:hover {
 .recent__img:hover {
     transform: scale(1.1);
     opacity: 0.7;
+    filter: brightness(50%);
 }
 
 .recent__img {
@@ -137,7 +142,7 @@ a:hover {
 }
 
 .socialLogos {
-    width: 10%;
+    width: 5%;
     margin: auto;
 }
 
@@ -150,15 +155,19 @@ a:hover {
 
 .ctaLinks__container {
     background-color: var(--clr-secondary);
-    margin:0.5rem;
-    padding: 1rem 0;
     display: flex;
     flex-direction: column;
 }  
 
-.ctaLinks__firstTitle,
+.ctaLinks__title,
 .recent__title {
-    padding-top: 1em;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.recent {
+    display: flex;
+    flex-direction: column;
 }
 
 fieldset {
@@ -168,6 +177,9 @@ fieldset {
 /* footer */
 
 footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     top: var(--distance-top);
     background-color: var(--clr-secondary);
@@ -181,11 +193,12 @@ footer {
 .social {
     display: inline-block;
     margin-top: 1em;
-    text-align: start;
+    justify-content: center;
 }
 
-.social p {
+.derechos {
     margin: auto;
+    font-size: 0.675em;
 }
 
 .social a {
@@ -199,13 +212,21 @@ footer {
 
 /* form */
 
+.contactForm {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+fieldset {
+    display: grid;
+    grid-template-columns: 1fr;
+}
 .inputText,
 .inputMsj {
     font-family: "Nunito Sans", sans-serif;
-    margin: .75rem;
-    padding: .3rem;
     border: 0;
     border-radius: .3em;
+    text-align: start;
 }
 
 
@@ -262,14 +283,61 @@ footer {
       padding-top: 0;
     }
 
+    .recent {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .recent__title {
+        flex-basis: 100%;
+    }
+    .recent__img { 
+        flex: 0 1 100%;
+        max-width: 30vw;
+        padding: 1rem;
+    }
+
+footer {
+    flex-direction: row;
 
 }
 
-/* TODO: 
-- hover state con descripción de texto para las imagenes.
-- Media Queries para desktop. El sitio está mobile first.
-- incluir flexbox en footer
-- incluir grid en form (contact.html)
+.social {
+    flex: 0 1 100%;
+    align-items: center;
+    justify-self: flex-start;
+}
+
+.firma {
+    flex: 0 1 100%;
+}
+
+.contactForm {
+    grid-template-columns: 20% 20% 30% 30%;
+    grid-template-rows: 1fr 1fr;
+}
+
+.contactForm__title {
+    grid-column: 1 / span 2;
+    align-self: center;
+}
+
+.contactForm__text {
+    grid-row-start: 2;
+    grid-column: 1 / span 2;
+    align-self:baseline
+}
+
+form {
+    grid-column: 3 / span 2;
+    grid-row: 1 / span 2;
+    align-self: flex-end;
+}
+
+}
+
+/* TODO:
 - homologar botones (productos y contacto)
 - eliminar wiggle en scroll horizontal (overflow-x: hidden no funciiona)
 */
