--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,18 @@ footer {
     padding-top: 5rem;
 }
 
+.bg-hero {
+    background-image: url(../images/hero.jpg);
+    background-position: top center;
+    background-size: 100vw;
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    object-fit: cover;
+    z-index: 100;
+}
+
 .bg-momTales {
     background-image: url(../images/momTalesBlog.PNG);
     background-position: center center;
@@ -167,6 +179,17 @@ footer {
 }
 
 /* ----------containers---------- */
+
+.main-text {
+    height: 50vh;
+    width: 100vw;
+}
+
+.no-content {
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+}
 
 .clr-darkpurple {
     background-color: var(--clr-secondary);
