Desafio SASS: Index con SCSS

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,70 +1,27 @@
-/* --limpieza general-- */
+/* ----- imports ----- */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;600&display=swap');
+@import "variables";
+@import "reset";
 
-*,
-*::after,
-*::before {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    }
+/* ----- tipografía ----- */
 
-
-:root {
-    --clr-main: #BDA2FF;
-    --clr-secondary: #8B74DA;
-    --clr-accent: #FFFDE7;
-    --clr-dark: #000;
-    --distance-top: 8rem;
-}
-
-/* --tipografía-- */
-
-html {
-    scroll-behavior: smooth;
-}
 
 body {
    font-family: "Nunito Sans", sans-serif; 
-   line-height: 1.25;
-   background-color: var(--clr-main);
+   line-height: 1.3;
    text-align: center;
    font-size: 1.37rem;
-   color: var(--clr-dark);
+   color: $clr-dark;
    overflow-x: hidden;
 }
 
-h2 {
-    font-size: 2.5rem;
-    color: var(--clr-dark);
-    margin-top: 3rm;
+.clr-main {
+    background-color: $clr-main;
 }
 
-.secondary-clr {
-    background-color: var(--clr-secondary);
-}
-
-h3 {
-    font-size: 1.8rem;
-    margin: 0.5em 0.5em 0.2em;
-    color: var(--clr-accent);
-    font-weight: 600;
-}
-
-h4 {
-    padding-inline: 1rem;
-    margin-top: 1rem;
-}
-
-.blogEntrada {
-    cursor: pointer;
-}
-.blogEntrada:hover {
-    color: var(--clr-dark)
-}
 
 .recent__title {
-    color: var(--clr-dark);
+    color: $clr-dark;
 }
 
 p {
@@ -78,13 +35,11 @@ p {
 
 a {
     text-decoration: none;
-    color:var(--clr-dark);
+    color: $clr-dark;
+    &:hover {
+        color: $clr-dark;
+    }
 }
-
-a:hover {
-    color: var(--clr-dark);
-}
-
 
 /*----------navegacion----------*/
 
@@ -95,16 +50,16 @@ header {
     top: 0;
 }
 
+
 main {
-    background-color: var(--clr-main);
     position: relative;
-    top: 8em;
+    top: $distance-top;
 }
 
 footer {
     position: relative;
-    top: 8em;
-    background-color: var(--clr-secondary);
+    top: $distance-top;
+    background-color: $clr-secondary;
 }
 
 /* ----------images----------*/ 
@@ -112,25 +67,25 @@ footer {
 .img-carrousel {
     height: 70vh;
     object-fit: cover;
-    filter:brightness(30%);
+    filter:brightness(100%);
 }
 .hover {
     transition: ease-in-out 300ms;
+    &:hover {
+        filter: brightness(50%);
+        transform: scale(1.1);
+        cursor: pointer;
+    }
 }
 
-.hover:hover {
-    filter: brightness(50%);
-    transform: scale(1.1);
-    cursor: pointer;
-}
 
 .hover-alt {
     transition: ease-in-out 300ms;
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
-.hover-alt:hover {
-    transform: scale(1.1);
-}
 
 .img-social {
     min-width: 20px;
@@ -156,34 +111,11 @@ footer {
     background-repeat: no-repeat;
     background-attachment: fixed;
     object-fit: cover;
-    z-index: 100;
 }
 
-.bg-momTales {
-    background-image: url(../images/momTalesBlog.PNG);
-    background-position: center center;
-    width: 100vw;
-    height: 70vh;
-    object-fit: cover;
-}
-.bg-contacto {
-    background-image: url(../images/contactoBanner.png);
-    background-position: center center;
-    width: 100vw;
-    height: 70vh;
-    object-fit: cover;
-}
-
-.max {
-    max-height: 18rem;
-}
 
 /* ----------containers---------- */
 
-.main-text {
-    height: 50vh;
-    width: 100vw;
-}
 
 .no-content {
     width: 100vw;
@@ -191,9 +123,6 @@ footer {
     opacity: 0;
 }
 
-.clr-darkpurple {
-    background-color: var(--clr-secondary);
-}
 
 .centered {
     display: flex;
@@ -214,13 +143,20 @@ footer {
     flex: 0 1 100%;
 }
 
-/* ----------media----------*/
+/* ---------- MEDIA ----------*/
+
+
 @media only screen and (min-width: 990px) {
     .img-size {
         width: 40vw;
         margin-left: 1vw;
     }
 
+
+    /* -----index----- */
+    .img-carrousel {
+        filter:brightness(30%);
+    }
     /* -----blog----- */
     .grid-layout {
         display: grid;
@@ -248,4 +184,3 @@ footer {
         gap: 2rem;
     }
 }
-
