--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 /* ----- imports ----- */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;600&display=swap');
-@import "variables";
-@import "reset";
+@import "variables", "reset", "mixins", "maps";
+
 
 /* ----- tipografía ----- */
 
@@ -45,20 +45,18 @@ a {
 
 header {
     width: 100%;
-    position: fixed;
-    z-index: 9999;
-    top: 0;
+    @include positions(fixed,0);
+    @include layer(header);
 }
 
-
 main {
-    position: relative;
-    top: $distance-top;
+    @include positions(relative,$distance-top);
+    @include layer(main);
 }
 
 footer {
-    position: relative;
-    top: $distance-top;
+    @include positions(relative,$distance-top);
+    @include layer(footer);
     background-color: $clr-secondary;
 }
 
@@ -70,20 +68,12 @@ footer {
     filter:brightness(100%);
 }
 .hover {
-    transition: ease-in-out 300ms;
-    &:hover {
-        filter: brightness(50%);
-        transform: scale(1.1);
-        cursor: pointer;
-    }
+    @include hover-scale(300ms, scale(1.1), 50%, pointer);
 }
 
 
 .hover-alt {
-    transition: ease-in-out 300ms;
-    &:hover {
-        transform: scale(1.1);
-    }
+    @include hover-scale(300ms, scale(1.1), 100%, pointer)
 }
 
 
@@ -97,8 +87,7 @@ footer {
 }
 
 .img-size {
-    width: 75%;
-    height: auto;
+    @include sizes(75%, auto);
     padding-top: 5rem;
 }
 
@@ -106,20 +95,19 @@ footer {
     background-image: url(../images/hero.jpg);
     background-position: top center;
     background-size: 100vw;
-    width: 100vw;
-    height: 100vh;
+    @include sizes(100vw, 100vh);
     background-repeat: no-repeat;
     background-attachment: fixed;
     object-fit: cover;
 }
 
 
+
 /* ----------containers---------- */
 
 
 .no-content {
-    width: 100vw;
-    height: 100vh;
+    @include sizes(100vw, 100vh);
     opacity: 0;
 }
 
@@ -142,9 +130,6 @@ footer {
 .basis {
     flex: 0 1 100%;
 }
-
-/* ---------- MEDIA ----------*/
-
 
 @media only screen and (min-width: 990px) {
     .img-size {
@@ -183,4 +168,11 @@ footer {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 2rem;
     }
+}
+
+@media (prefers-reduced-motion) {
+    .hover, .hover-alt {
+        @include hover-scale(0ms, scale(1))
+    }
+    
 }
