--- a/css/compilado.css
+++ b/css/compilado.css
@@ -20,6 +20,9 @@ body {
 .clr-main {
   background-color: #BDA2FF; }
 
+.clr-secondary {
+  background-color: #8B74DA; }
+
 .recent__title {
   color: #000; }
 
@@ -96,6 +99,25 @@ footer {
   background-attachment: fixed;
   object-fit: cover; }
 
+.bg-momTales {
+  background-image: url(../images/momTalesBlog.PNG);
+  width: 100vw;
+  height: 70vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  object-fit: cover; }
+
+.bg-contacto {
+  background-image: url(../images/contactoBanner.png);
+  background-position: center center;
+  width: 100vw;
+  height: 70vh;
+  object-fit: cover; }
+
+.max {
+  width: 100%;
+  height: 18rem; }
+
 /* ----------containers---------- */
 .no-content {
   width: 100vw;
@@ -135,7 +157,9 @@ footer {
     grid-row: 2 / span 2;
     align-self: center;
     justify-self: center;
-    width: 40vw; }
+    width: 40vw;
+    max-height: 60vh;
+    object-fit: cover; }
   .reverse > img {
     grid-column-start: 2; }
   /*-----productos-----*/
